--- a/about/index.html
+++ b/about/index.html
@@ -1,9 +1,13 @@
----
-layout: default
-title: Web Programming
----
-<div class="blurb">
-  <h1>THIS IS ABOUT ME!</h1>
-  <p>Hello everyone!</p>
-  <p>I am a student of HWU and this is my first lab session for the course of web programming!</p>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Web Programming</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="blurb">
+        <h1>THIS IS ABOUT ME!</h1>
+        <p>Hello everyone!</p>
+        <p>I am a student at HWU and this is my first lab work!</p>
+        </body>
+      </html>
