using jekyll to generate the about page

--- a/about/index.html
+++ b/about/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Web Programming</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="blurb">
-        <h1>THIS IS ABOUT ME!</h1>
-        <p>Hello everyone!</p>
-        <p>I am a student at HWU and this is my first lab work!</p>
-        </body>
-      </html>
+---
+layout: default
+title: Web Programming
+---
+<div class="blurb">
+ <h1>THIS IS ABOUT ME!</h1>
+ <p>Hello everyone!</p>
+ <p>I am a student at HWU and this is my first lab work!</p>
+</div>
+
