--- a/about/index.html
+++ b/about/index.html
@@ -6,5 +6,6 @@ title: Web Programming
  <h1>THIS IS ABOUT ME!</h1>
  <p>Hello everyone!</p>
  <p>I am a student at HWU and this is my first lab work!</p>
+ <img src="download.jpg" alt="web programming!">
 </div>
 
