--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ title: Web Programming
 <div class="blurb">
  <h1>THIS IS ABOUT ME!</h1>
  <p>Hello everyone!</p>
- <p>I am a student at HWU and this is my first lab work!</p>
+ <p>I am a student at <em>HWU</em> and this is my first lab work!</p>
  <img src="download.jpg" alt="web programming!">
 </div>
 
